# socratix

./: Cargo.toml
src/: block.rs  blockchain.rs  config.rs  lib.rs  main.rs  memory_pool.rs  node.rs  proof_of_work.rs  server.rs  transaction.rs  utils.rs  utxo_set.rs  wallet.rs  wallets.rs
