[package]
name = "socratix"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
clap = "4.5.36"
data-encoding = "2.9.0"
log = "0.4.27"
num-bigint = "0.4.6"
once_cell = "1.21.3"
ring = "0.16.20"
rust-crypto = "0.2.36"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = "0.34.7"
